added pytorch to environment for correct build

--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,10 @@
 name: prediction
 channels:
   - defaults
+  - pytorch
   - conda-forge
 dependencies:
+  - pytorch
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h5eee18b_5
