--- a/environment.yml
+++ b/environment.yml
@@ -1,256 +1,363 @@
-name: prediction
+name: base
 channels:
-  - defaults
-  - pytorch
   - conda-forge
+  - defaults
 dependencies:
-  - pytorch
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - bzip2=1.0.8=h5eee18b_5
-  - ca-certificates=2024.3.11=h06a4308_0
-  - cairo=1.16.0=h18b612c_1001
-  - certifi=2024.2.2=py38h06a4308_0
-  - fontconfig=2.14.1=hef1e5e3_0
-  - freetype=2.12.1=h4a9f257_0
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - icu=58.2=he6710b0_3
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libpng=1.6.39=h5eee18b_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libuuid=1.0.3=h7f8727e_2
-  - libxcb=1.15=h7f8727e_0
-  - libxml2=2.9.14=h74e7548_0
-  - ncurses=6.4=h6a678d5_0
-  - openbabel=3.1.1=py38hd2c4bc0_2
-  - openssl=3.0.13=h7f8727e_0
-  - pcre=8.45=h295c915_0
-  - pcre2=10.42=hebb0a14_0
-  - pip=23.3.1=py38h06a4308_0
-  - pixman=0.38.0=h7b6447c_0
-  - python=3.8.19=h955ad1f_0
-  - python_abi=3.8=2_cp38
-  - readline=8.2=h5eee18b_0
-  - setuptools=68.2.2=py38h06a4308_0
-  - sqlite=3.41.2=h5eee18b_0
-  - tk=8.6.12=h1ccaba5_0
-  - wheel=0.41.2=py38h06a4308_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.2=h470a237_5
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h27cfd23_1007
-  - xz=5.4.6=h5eee18b_0
-  - zlib=1.2.13=h5eee18b_0
+  - anaconda-anon-usage=0.4.3
+  - anaconda-client=1.11.2
+  - anaconda-cloud-auth=0.1.4
+  - anaconda-navigator=2.5.1
+  - anaconda-project=0.11.1
+  - anyio=3.5.0
+  - appnope=0.1.2
+  - archspec=0.2.3
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - ase=3.23.0
+  - asttokens=2.0.5
+  - async-lru=2.0.4
+  - attrs=23.1.0
+  - babel=2.11.0
+  - backcall=0.2.0
+  - backports=1.1
+  - backports.functools_lru_cache=1.6.4
+  - backports.tempfile=1.0
+  - backports.weakref=1.0.post1
+  - beautifulsoup4=4.12.2
+  - blas=1.0
+  - bleach=4.1.0
+  - boltons=23.0.0
+  - bottleneck=1.3.7
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2024.9.24
+  - cairo=1.18.0
+  - cctools=949.0.1
+  - cctools_osx-64=949.0.1
+  - certifi=2024.8.30
+  - cffi=1.16.0
+  - chardet=4.0.0
+  - charset-normalizer=2.0.4
+  - click=8.1.7
+  - clyent=1.2.2
+  - comm=0.1.2
+  - conda=24.9.2
+  - conda-build=3.28.2
+  - conda-content-trust=0.1.3
+  - conda-index=0.3.0
+  - conda-libmamba-solver=23.12.0
+  - conda-pack=0.6.0
+  - conda-package-handling=2.2.0
+  - conda-package-streaming=0.9.0
+  - conda-repo-cli=1.0.75
+  - conda-token=0.4.0
+  - conda-verify=3.4.2
+  - contourpy=1.2.0
+  - cryptography=41.0.7
+  - cyrus-sasl=2.1.28
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - distro=1.8.0
+  - exceptiongroup=1.0.4
+  - executing=0.8.3
+  - expat=2.6.3
+  - filelock=3.13.1
+  - flask=3.0.3
+  - fmt=9.1.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=2.001
+  - font-ttf-source-code-pro=2.030
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-anaconda=1
+  - fonts-conda-ecosystem=1
+  - freetype=2.12.1
+  - frozendict=2.4.2
+  - future=0.18.3
+  - gettext=0.21.0
+  - giflib=5.2.1
+  - glib=2.78.4
+  - glib-tools=2.78.4
+  - greenlet=3.0.1
+  - gst-plugins-base=1.14.1
+  - gstreamer=1.14.1
+  - icu=73.2
+  - idna=3.4
+  - importlib-metadata=7.0.0
+  - importlib_metadata=7.0.0
+  - ipykernel=6.25.0
+  - ipython=8.15.0
+  - ipywidgets=8.0.4
+  - itsdangerous=2.2.0
+  - jaraco.classes=3.2.1
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - joblib=1.4.2
+  - jpeg=9e
+  - json5=0.9.6
+  - jsonpatch=1.32
+  - jsonpointer=2.1
+  - jsonschema=4.19.2
+  - jsonschema-specifications=2023.7.1
+  - jupyter=1.0.0
+  - jupyter-lsp=2.2.0
+  - jupyter_client=8.6.0
+  - jupyter_console=6.6.3
+  - jupyter_core=5.5.0
+  - jupyter_events=0.8.0
+  - jupyter_server=2.10.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab=4.0.8
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.25.1
+  - jupyterlab_widgets=3.0.9
+  - keyring=23.13.1
+  - krb5=1.20.1
+  - lcms2=2.12
+  - ld64=530
+  - ld64_osx-64=530
+  - ldid=2.1.5
+  - lerc=3.0
+  - libarchive=3.7.4
+  - libboost=1.84.0
+  - libboost-python=1.84.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang13=14.0.6
+  - libcurl=8.4.0
+  - libcxx=19.1.3
+  - libdeflate=1.17
+  - libedit=3.1.20230828
+  - libev=4.33
+  - libffi=3.4.4
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libglib=2.78.4
+  - libiconv=1.16
+  - liblief=0.12.3
+  - libllvm14=14.0.6
+  - libmamba=1.5.8
+  - libmambapy=1.5.8
+  - libnghttp2=1.57.0
+  - libopenblas=0.3.21
+  - libpng=1.6.39
+  - libpq=12.15
+  - libsodium=1.0.18
+  - libsolv=0.7.24
+  - libssh2=1.10.0
+  - libtiff=4.5.1
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
+  - libxml2=2.13.1
+  - libzlib=1.2.13
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - markupsafe=2.1.3
+  - matplotlib-base=3.9.2
+  - matplotlib-inline=0.1.6
+  - menuinst=2.0.1
+  - mistune=2.0.4
+  - mordred=1.2.0
+  - more-itertools=10.1.0
+  - mysql=5.7.24
+  - navigator-updater=0.4.0
+  - nbclient=0.8.0
+  - nbconvert=7.10.0
+  - nbformat=5.9.2
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - networkx=3.3
+  - nose=1.3.7
+  - notebook=7.0.6
+  - notebook-shim=0.2.3
+  - numexpr=2.10.1
+  - numpy-base=1.26.4
+  - openbabel=3.1.1
+  - openjpeg=2.4.0
+  - openssl=3.0.15
+  - overrides=7.4.0
+  - packaging=23.1
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - patch=2.7.6
+  - pathlib=1.0.1
+  - pcre=8.45
+  - pcre2=10.42
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=10.0.1
+  - pip=22.3.1
+  - pixman=0.43.4
+  - pkce=1.0.3
+  - pkginfo=1.9.6
+  - platformdirs=3.10.0
+  - pluggy=1.0.0
+  - ply=3.11
+  - prometheus_client=0.14.1
+  - prompt-toolkit=3.0.36
+  - prompt_toolkit=3.0.36
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - py-lief=0.12.3
+  - pybind11-abi=4
+  - pycairo=1.23.0
+  - pycosat=0.6.6
+  - pycparser=2.21
+  - pydantic=1.10.12
+  - pygments=2.15.1
+  - pyjwt=2.4.0
+  - pyopenssl=23.2.0
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - pysocks=1.7.1
+  - python=3.10.13
+  - python-dateutil=2.8.2
+  - python-dotenv=0.21.0
+  - python-fastjsonschema=2.16.2
+  - python-json-logger=2.0.7
+  - python-libarchive-c=2.9
+  - python-tzdata=2023.3
+  - python.app=3
+  - python_abi=3.10
+  - pytz=2023.3.post1
+  - pyyaml=6.0.1
+  - pyzmq=25.1.0
+  - qt-main=5.15.2
+  - qtconsole=5.5.0
+  - qtpy=2.4.1
+  - readline=8.2
+  - referencing=0.30.2
+  - reportlab=3.5.67
+  - reproc=14.2.4
+  - reproc-cpp=14.2.4
+  - requests=2.31.0
+  - requests-toolbelt=1.0.0
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rpds-py=0.10.6
+  - ruamel.yaml=0.17.21
+  - ruamel.yaml.clib=0.2.6
+  - ruamel_yaml=0.17.21
+  - scikit-learn=1.5.1
+  - semver=2.13.0
+  - send2trash=1.8.2
+  - setuptools=65.6.3
+  - sip=6.7.12
+  - six=1.16.0
+  - sniffio=1.2.0
+  - soupsieve=2.5
+  - sqlalchemy=2.0.34
+  - sqlite=3.41.2
+  - stack_data=0.2.0
+  - tapi=1000.10.8
+  - terminado=0.17.1
+  - threadpoolctl=3.5.0
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - tomli=2.0.1
+  - tornado=6.3.3
+  - tqdm=4.65.0
+  - traitlets=5.7.1
+  - truststore=0.8.0
+  - typing-extensions=4.7.1
+  - typing_extensions=4.7.1
+  - ujson=5.4.0
+  - unicodedata2=15.1.0
+  - urllib3=1.26.18
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.58.0
+  - werkzeug=3.0.3
+  - wheel=0.38.4
+  - widgetsnbextension=4.0.5
+  - xz=5.4.6
+  - yaml=0.2.5
+  - yaml-cpp=0.8.0
+  - zeromq=4.3.4
+  - zipp=3.17.0
+  - zlib=1.2.13
+  - zstandard=0.19.0
+  - zstd=1.5.5
   - pip:
-      - absl-py==2.1.0
-      - aiohttp==3.9.3
-      - aiosignal==1.3.1
-      - alembic==1.13.1
-      - antlr4-python3-runtime==4.9.3
-      - anyio==4.3.0
-      - argon2-cffi==23.1.0
-      - argon2-cffi-bindings==21.2.0
+      - absl-py==2.0.0
+      - altair==5.3.0
+      - altair-tiles==0.3.0
+      - anywidget==0.9.10
       - arrow==1.3.0
-      - ase==3.22.1
-      - asttokens==2.4.1
       - astunparse==1.6.3
-      - async-lru==2.0.4
-      - async-timeout==4.0.3
-      - attrs==23.2.0
-      - babel==2.14.0
-      - backcall==0.2.0
-      - beautifulsoup4==4.12.3
-      - bleach==6.1.0
-      - cachetools==5.3.3
-      - cffi==1.16.0
-      - charset-normalizer==3.3.2
-      - colorlog==6.8.2
-      - comm==0.2.2
-      - contourpy==1.1.1
+      - blinker==1.8.2
+      - cachetools==5.3.2
+      - click-plugins==1.1.1
+      - cligj==0.7.2
       - cycler==0.12.1
-      - debugpy==1.8.1
-      - decorator==5.1.1
-      - defusedxml==0.7.1
-      - dirsync==2.2.5
-      - exceptiongroup==1.2.0
-      - executing==2.0.1
-      - fasteners==0.19
-      - fastjsonschema==2.19.1
-      - filelock==3.13.3
-      - flatbuffers==24.3.25
-      - fonttools==4.51.0
+      - dash==2.17.0
+      - dash-core-components==2.0.0
+      - dash-html-components==2.0.0
+      - dash-table==5.0.0
+      - fiona==1.9.6
+      - flatbuffers==23.5.26
+      - fonttools==4.47.2
       - fqdn==1.5.1
-      - frozenlist==1.4.1
-      - fsspec==2024.3.1
-      - gast==0.4.0
-      - google-auth==2.29.0
-      - google-auth-oauthlib==1.0.0
+      - gast==0.5.4
+      - geopandas==0.14.4
+      - google-auth==2.25.2
+      - google-auth-oauthlib==1.1.0
       - google-pasta==0.2.0
-      - greenlet==3.0.3
-      - grpcio==1.62.1
-      - h11==0.14.0
-      - h5py==3.10.0
-      - httpcore==1.0.5
-      - httpx==0.27.0
-      - hydra-colorlog==1.2.0
-      - hydra-core==1.3.2
-      - idna==3.6
-      - importlib-metadata==7.1.0
-      - importlib-resources==6.4.0
-      - ipykernel==6.29.4
-      - ipython==8.12.3
-      - ipywidgets==8.1.2
+      - grpcio==1.60.0
+      - ipytablewidgets==0.3.1
       - isoduration==20.11.0
-      - jedi==0.19.1
-      - jinja2==3.1.3
-      - joblib==1.3.2
-      - json5==0.9.24
-      - jsonpointer==2.4
-      - jsonschema==4.21.1
-      - jsonschema-specifications==2023.12.1
-      - jupyter==1.0.0
-      - jupyter-client==8.6.1
-      - jupyter-console==6.6.3
-      - jupyter-core==5.7.2
-      - jupyter-events==0.10.0
-      - jupyter-lsp==2.2.4
-      - jupyter-server==2.13.0
-      - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.1.5
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.25.4
-      - jupyterlab-widgets==3.0.10
-      - keras==2.13.1
+      - keras==2.15.0
       - kiwisolver==1.4.5
-      - libclang==18.1.1
-      - lightning-utilities==0.11.2
-      - looseversion==1.3.0
-      - mako==1.3.3
-      - markdown==3.6
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.7.5
-      - matplotlib-inline==0.1.6
-      - matscipy==1.0.0
-      - mdurl==0.1.2
-      - mistune==3.0.2
-      - mpmath==1.3.0
-      - multidict==6.0.5
-      - nbclient==0.10.0
-      - nbconvert==7.16.3
-      - nbformat==5.10.4
-      - nest-asyncio==1.6.0
-      - networkx==3.1
-      - notebook==7.1.2
-      - notebook-shim==0.2.4
-      - numpy==1.24.3
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu12==8.9.2.26
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu12==2.19.3
-      - nvidia-nvjitlink-cu12==12.4.127
-      - nvidia-nvtx-cu12==12.1.105
+      - libclang==16.0.6
+      - lz4==4.3.3
+      - matplotlib==3.8.2
+      - mercantile==1.2.1
+      - ml-dtypes==0.2.0
+      - numpy==1.26.3
       - oauthlib==3.2.2
-      - omegaconf==2.3.0
       - opt-einsum==3.3.0
-      - optuna==3.6.1
-      - overrides==7.7.0
-      - packaging==24.0
-      - pandas==2.0.3
-      - pandocfilters==1.5.1
-      - parso==0.8.4
-      - pexpect==4.9.0
-      - pickleshare==0.7.5
-      - pillow==10.3.0
-      - pkgutil-resolve-name==1.3.10
-      - platformdirs==4.2.0
-      - prometheus-client==0.20.0
-      - prompt-toolkit==3.0.43
-      - protobuf==4.25.3
-      - psutil==5.9.8
-      - ptyprocess==0.7.0
-      - pure-eval==0.2.2
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
-      - pycparser==2.22
-      - pygments==2.17.2
-      - pyparsing==3.1.2
-      - python-dateutil==2.9.0.post0
-      - python-json-logger==2.0.7
-      - pytorch-lightning==2.2.1
-      - pytz==2024.1
-      - pyyaml==6.0.1
-      - pyzmq==25.1.2
-      - qtconsole==5.5.1
-      - qtpy==2.4.1
-      - rdkit==2023.9.5
-      - referencing==0.34.0
-      - requests==2.31.0
-      - requests-oauthlib==2.0.0
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rich==13.7.1
-      - rpds-py==0.18.0
+      - pandas==1.5.3
+      - pandoc==2.3
+      - plotly==5.22.0
+      - plumbum==1.8.2
+      - protobuf==4.23.4
+      - psygnal==0.11.0
+      - pyarrow==15.0.0
+      - pydot==1.4.2
+      - pyparsing==3.1.1
+      - pyproj==3.6.1
+      - rdkit==2023.9.1
+      - requests-oauthlib==1.3.1
+      - retrying==1.3.4
       - rsa==4.9
-      - schnetpack==2.0.4
-      - scikit-learn==1.3.2
-      - scipy==1.10.1
-      - send2trash==1.8.2
-      - six==1.16.0
-      - sniffio==1.3.1
-      - soupsieve==2.5
-      - sqlalchemy==2.0.29
-      - stack-data==0.6.3
-      - sympy==1.12
-      - tensorboard==2.13.0
+      - scipy==1.13.0
+      - seaborn==0.13.2
+      - shapely==2.0.4
+      - tenacity==8.3.0
+      - tensorboard==2.15.1
       - tensorboard-data-server==0.7.2
-      - tensorflow==2.13.1
-      - tensorflow-estimator==2.13.0
+      - tensorflow==2.15.0
+      - tensorflow-estimator==2.15.0
       - tensorflow-io-gcs-filesystem==0.34.0
       - termcolor==2.4.0
-      - terminado==0.18.1
-      - threadpoolctl==3.4.0
-      - tinycss2==1.2.1
-      - tomli==2.0.1
-      - torch==2.2.2
-      - torch-ema==0.3
-      - torch-geometric==2.5.2
-      - torch-scatter==2.1.2
-      - torchmetrics==1.0.1
-      - tornado==6.4
-      - tqdm==4.66.2
-      - traitlets==5.14.2
-      - triton==2.2.0
+      - toolz==0.12.1
+      - traittypes==0.2.1
       - types-python-dateutil==2.9.0.20240316
-      - typing-extensions==4.11.0
-      - tzdata==2024.1
+      - tzdata==2023.4
       - uri-template==1.3.0
-      - urllib3==2.2.1
-      - wcwidth==0.2.13
+      - vega==4.0.0
+      - vega-datasets==0.9.0
+      - vegafusion==1.6.7
+      - vegafusion-python-embed==1.6.7
+      - vl-convert-python==1.4.0
       - webcolors==1.13
-      - webencodings==0.5.1
-      - websocket-client==1.7.0
-      - werkzeug==3.0.2
-      - widgetsnbextension==4.0.10
-      - wrapt==1.16.0
-      - yarl==1.9.4
-      - zipp==3.18.1
-prefix: /home/fostooq/miniconda3/envs/prediction
+      - xgboost==2.0.2
+      - xlrd==2.0.1
+      - xyzservices==2024.4.0
+prefix: /Users/anna/anaconda3
