--- a/environment.yml
+++ b/environment.yml
@@ -1,362 +1,230 @@
-name: solvation
+name: tf_env
 channels:
+  - pyg
+  - bioconda
   - conda-forge
   - defaults
 dependencies:
-  - anaconda-anon-usage=0.4.3
-  - anaconda-client=1.11.2
-  - anaconda-cloud-auth=0.1.4
-  - anaconda-navigator=2.5.1
-  - anaconda-project=0.11.1
-  - anyio=3.5.0
-  - appnope=0.1.2
-  - archspec=0.2.3
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - ase=3.23.0
+  - absl-py=2.1.0
+  - aiohappyeyeballs=2.4.4
+  - aiohttp=3.11.10
+  - aiosignal=1.2.0
+  - ase=3.24.0
   - asttokens=2.0.5
-  - async-lru=2.0.4
-  - attrs=23.1.0
-  - babel=2.11.0
-  - backcall=0.2.0
-  - backports=1.1
-  - backports.functools_lru_cache=1.6.4
-  - backports.tempfile=1.0
-  - backports.weakref=1.0.post1
-  - beautifulsoup4=4.12.2
+  - astunparse=1.6.3
+  - async-timeout=5.0.1
+  - attrs=24.3.0
+  - bel-resources=0.0.3
   - blas=1.0
-  - bleach=4.1.0
-  - boltons=23.0.0
-  - bottleneck=1.3.7
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotli-python=1.0.9
+  - blinker=1.9.0
+  - bottleneck=1.4.2
+  - brotli-python=1.1.0
   - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2024.9.24
-  - cairo=1.18.0
-  - cctools=949.0.1
-  - cctools_osx-64=949.0.1
-  - certifi=2024.8.30
-  - cffi=1.16.0
-  - chardet=4.0.0
-  - charset-normalizer=2.0.4
-  - click=8.1.7
-  - clyent=1.2.2
-  - comm=0.1.2
-  - conda=24.9.2
-  - conda-build=3.28.2
-  - conda-content-trust=0.1.3
-  - conda-index=0.3.0
-  - conda-libmamba-solver=23.12.0
-  - conda-pack=0.6.0
-  - conda-package-handling=2.2.0
-  - conda-package-streaming=0.9.0
-  - conda-repo-cli=1.0.75
-  - conda-token=0.4.0
-  - conda-verify=3.4.2
-  - contourpy=1.2.0
-  - cryptography=41.0.7
-  - cyrus-sasl=2.1.28
-  - debugpy=1.6.7
+  - c-ares=1.34.4
+  - ca-certificates=2024.12.31
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cairo=1.18.2
+  - certifi=2024.12.14
+  - cffi=1.17.1
+  - charset-normalizer=3.4.1
+  - click=8.1.8
+  - click-plugins=1.1.1
+  - contourpy=1.3.1
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.27
   - decorator=5.1.1
-  - defusedxml=0.7.1
-  - distro=1.8.0
-  - exceptiongroup=1.0.4
+  - exceptiongroup=1.2.0
   - executing=0.8.3
-  - expat=2.6.3
   - filelock=3.13.1
-  - flask=3.0.3
-  - fmt=9.1.0
+  - flask=3.1.0
+  - flatbuffers=24.3.25
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=2.001
   - font-ttf-source-code-pro=2.030
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
+  - fontconfig=2.15.0
   - fonts-anaconda=1
   - fonts-conda-ecosystem=1
+  - fonttools=4.55.3
   - freetype=2.12.1
-  - frozendict=2.4.2
-  - future=0.18.3
-  - gettext=0.21.0
-  - giflib=5.2.1
-  - glib=2.78.4
-  - glib-tools=2.78.4
-  - greenlet=3.0.1
-  - gst-plugins-base=1.14.1
-  - gstreamer=1.14.1
-  - icu=73.2
-  - idna=3.4
-  - importlib-metadata=7.0.0
-  - importlib_metadata=7.0.0
-  - ipykernel=6.25.0
-  - ipython=8.15.0
-  - ipywidgets=8.0.4
+  - frozenlist=1.5.0
+  - fsspec=2024.12.0
+  - gast=0.6.0
+  - giflib=5.2.2
+  - glib=2.82.2
+  - glib-tools=2.82.2
+  - gmp=6.3.0
+  - gmpy2=2.1.2
+  - google-pasta=0.2.0
+  - greenlet=3.1.1
+  - grpcio=1.62.2
+  - h2=4.1.0
+  - h5py=3.12.1
+  - hdf5=1.14.4
+  - hpack=4.0.0
+  - hyperframe=6.0.1
+  - icu=75.1
+  - idna=3.10
+  - importlib-metadata=8.6.1
+  - ipython=8.30.0
   - itsdangerous=2.2.0
-  - jaraco.classes=3.2.1
-  - jedi=0.18.1
-  - jinja2=3.1.2
+  - jedi=0.19.2
+  - jinja2=3.1.5
   - joblib=1.4.2
-  - jpeg=9e
-  - json5=0.9.6
-  - jsonpatch=1.32
-  - jsonpointer=2.1
-  - jsonschema=4.19.2
-  - jsonschema-specifications=2023.7.1
-  - jupyter=1.0.0
-  - jupyter-lsp=2.2.0
-  - jupyter_client=8.6.0
-  - jupyter_console=6.6.3
-  - jupyter_core=5.5.0
-  - jupyter_events=0.8.0
-  - jupyter_server=2.10.0
-  - jupyter_server_terminals=0.4.4
-  - jupyterlab=4.0.8
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=2.25.1
-  - jupyterlab_widgets=3.0.9
-  - keyring=23.13.1
-  - krb5=1.20.1
-  - lcms2=2.12
-  - ld64=530
-  - ld64_osx-64=530
-  - ldid=2.1.5
-  - lerc=3.0
-  - libarchive=3.7.4
-  - libboost=1.84.0
-  - libboost-python=1.84.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libclang13=14.0.6
-  - libcurl=8.4.0
-  - libcxx=19.1.3
-  - libdeflate=1.17
-  - libedit=3.1.20230828
+  - keras=3.8.0
+  - kiwisolver=1.4.8
+  - krb5=1.21.3
+  - lcms2=2.16
+  - lerc=4.0.0
+  - libabseil=20240116.2
+  - libaec=1.1.3
+  - libblas=3.9.0
+  - libboost=1.86.0
+  - libboost-python=1.86.0
+  - libcblas=3.9.0
+  - libcurl=8.11.1
+  - libcxx=19.1.7
+  - libdeflate=1.23
+  - libedit=3.1.20191231
   - libev=4.33
+  - libexpat=2.6.4
   - libffi=3.4.4
   - libgfortran=5.0.0
-  - libgfortran5=11.3.0
-  - libglib=2.78.4
-  - libiconv=1.16
-  - liblief=0.12.3
-  - libllvm14=14.0.6
-  - libmamba=1.5.8
-  - libmambapy=1.5.8
-  - libnghttp2=1.57.0
-  - libopenblas=0.3.21
-  - libpng=1.6.39
-  - libpq=12.15
-  - libsodium=1.0.18
-  - libsolv=0.7.24
-  - libssh2=1.10.0
-  - libtiff=4.5.1
-  - libwebp=1.3.2
-  - libwebp-base=1.3.2
-  - libxml2=2.13.1
-  - libzlib=1.2.13
-  - llvm-openmp=14.0.6
-  - lz4-c=1.9.4
-  - markupsafe=2.1.3
-  - matplotlib-base=3.9.2
+  - libgfortran5=13.2.0
+  - libglib=2.82.2
+  - libgrpc=1.62.2
+  - libiconv=1.17
+  - libintl=0.22.5
+  - libintl-devel=0.22.5
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - liblzma=5.6.3
+  - libnghttp2=1.64.0
+  - libntlm=1.6
+  - libopenblas=0.3.28
+  - libpng=1.6.45
+  - libpq=17.2
+  - libprotobuf=4.25.3
+  - librdkit=2024.09.4
+  - libre2-11=2024.02.01
+  - libsqlite=3.48.0
+  - libssh2=1.11.1
+  - libtiff=4.7.0
+  - libtorch=2.1.2
+  - libuv=1.48.0
+  - libwebp-base=1.5.0
+  - libxcb=1.17.0
+  - libxml2=2.13.5
+  - libzlib=1.3.1
+  - llvm-openmp=19.1.7
+  - markdown=3.6
+  - markdown-it-py=3.0.0
+  - markupsafe=3.0.2
+  - matplotlib=3.10.0
+  - matplotlib-base=3.10.0
   - matplotlib-inline=0.1.6
-  - menuinst=2.0.1
-  - mistune=2.0.4
+  - mdurl=0.1.2
+  - mkl=2023.2.0
+  - mkl-service=2.4.0
+  - ml_dtypes=0.4.0
   - mordred=1.2.0
-  - more-itertools=10.1.0
-  - mysql=5.7.24
-  - navigator-updater=0.4.0
-  - nbclient=0.8.0
-  - nbconvert=7.10.0
-  - nbformat=5.9.2
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - mpmath=1.3.0
+  - multidict=6.1.0
+  - multisplitby=0.0.1
+  - namex=0.0.8
   - ncurses=6.4
-  - nest-asyncio=1.5.6
-  - networkx=3.3
-  - nose=1.3.7
-  - notebook=7.0.6
-  - notebook-shim=0.2.3
-  - numexpr=2.10.1
-  - numpy-base=1.26.4
+  - networkx=3.4.2
+  - numexpr=2.8.7
+  - numpy=1.26.4
   - openbabel=3.1.1
-  - openjpeg=2.4.0
-  - openssl=3.0.15
-  - overrides=7.4.0
-  - packaging=23.1
-  - pandocfilters=1.5.0
-  - parso=0.8.3
-  - patch=2.7.6
-  - pathlib=1.0.1
-  - pcre=8.45
-  - pcre2=10.42
+  - openjpeg=2.5.3
+  - openldap=2.6.9
+  - openssl=3.4.0
+  - opt_einsum=3.4.0
+  - optree=0.14.0
+  - packaging=24.2
+  - pandas=2.2.3
+  - parso=0.8.4
+  - pcre2=10.44
   - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=10.0.1
-  - pip=22.3.1
-  - pixman=0.43.4
-  - pkce=1.0.3
-  - pkginfo=1.9.6
-  - platformdirs=3.10.0
-  - pluggy=1.0.0
-  - ply=3.11
-  - prometheus_client=0.14.1
-  - prompt-toolkit=3.0.36
-  - prompt_toolkit=3.0.36
+  - pillow=11.1.0
+  - pip=24.2
+  - pixman=0.44.2
+  - prompt-toolkit=3.0.43
+  - prompt_toolkit=3.0.43
+  - propcache=0.2.0
+  - protobuf=4.25.3
   - psutil=5.9.0
+  - pthread-stubs=0.3
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
-  - py-lief=0.12.3
+  - pybel=0.13.2
   - pybind11-abi=4
   - pycairo=1.23.0
-  - pycosat=0.6.6
-  - pycparser=2.21
-  - pydantic=1.10.12
-  - pygments=2.15.1
-  - pyjwt=2.4.0
-  - pyopenssl=23.2.0
-  - pyqt=5.15.10
-  - pyqt5-sip=12.13.0
+  - pycparser=2.22
+  - pyg=2.5.2
+  - pygments=2.19.1
+  - pyparsing=3.2.0
   - pysocks=1.7.1
   - python=3.10.13
-  - python-dateutil=2.8.2
-  - python-dotenv=0.21.0
-  - python-fastjsonschema=2.16.2
-  - python-json-logger=2.0.7
-  - python-libarchive-c=2.9
+  - python-dateutil=2.9.0post0
+  - python-flatbuffers=24.12.23
   - python-tzdata=2023.3
-  - python.app=3
+  - python-wget=3.2
   - python_abi=3.10
-  - pytz=2023.3.post1
-  - pyyaml=6.0.1
-  - pyzmq=25.1.0
-  - qt-main=5.15.2
-  - qtconsole=5.5.0
-  - qtpy=2.4.1
+  - pytorch=2.1.2
+  - pytorch_scatter=2.1.2
+  - pytz=2024.1
+  - pyyaml=6.0.2
+  - rdkit=2024.09.4
+  - re2=2024.02.01
   - readline=8.2
-  - referencing=0.30.2
   - reportlab=3.5.67
-  - reproc=14.2.4
-  - reproc-cpp=14.2.4
-  - requests=2.31.0
-  - requests-toolbelt=1.0.0
-  - rfc3339-validator=0.1.4
-  - rfc3986-validator=0.1.1
-  - rpds-py=0.10.6
-  - ruamel.yaml=0.17.21
-  - ruamel.yaml.clib=0.2.6
-  - ruamel_yaml=0.17.21
-  - scikit-learn=1.5.1
-  - semver=2.13.0
-  - send2trash=1.8.2
-  - setuptools=65.6.3
-  - sip=6.7.12
-  - six=1.16.0
-  - sniffio=1.2.0
-  - soupsieve=2.5
-  - sqlalchemy=2.0.34
-  - sqlite=3.41.2
+  - requests=2.32.3
+  - requests-file=1.5.1
+  - rich=13.9.4
+  - scikit-learn=1.2.2
+  - scipy=1.13.0
+  - setuptools=75.1.0
+  - six=1.17.0
+  - sleef=3.5.1
+  - snappy=1.2.1
+  - sqlalchemy=2.0.37
+  - sqlite=3.32.3
   - stack_data=0.2.0
-  - tapi=1000.10.8
-  - terminado=0.17.1
-  - threadpoolctl=3.5.0
-  - tinycss2=1.2.1
-  - tk=8.6.12
-  - tomli=2.0.1
-  - tornado=6.3.3
-  - tqdm=4.65.0
-  - traitlets=5.7.1
-  - truststore=0.8.0
-  - typing-extensions=4.7.1
-  - typing_extensions=4.7.1
-  - ujson=5.4.0
+  - sympy=1.13.3
+  - tbb=2021.8.0
+  - tensorboard=2.17.1
+  - tensorboard-data-server=0.7.0
+  - tensorflow=2.17.0
+  - tensorflow-base=2.17.0
+  - tensorflow-estimator=2.17.0
+  - termcolor=2.5.0
+  - threadpoolctl=2.2.0
+  - tk=8.6.13
+  - torchvision=0.16.1
+  - tornado=6.4.2
+  - tqdm=4.66.5
+  - traitlets=5.14.3
+  - typing-extensions=4.12.2
+  - typing_extensions=4.12.2
+  - tzdata=2024b
   - unicodedata2=15.1.0
-  - urllib3=1.26.18
+  - urllib3=2.3.0
   - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - websocket-client=0.58.0
-  - werkzeug=3.0.3
-  - wheel=0.38.4
-  - widgetsnbextension=4.0.5
+  - werkzeug=3.1.3
+  - wheel=0.44.0
+  - wrapt=1.17.2
+  - xorg-libxau=1.0.12
+  - xorg-libxdmcp=1.1.5
   - xz=5.4.6
   - yaml=0.2.5
-  - yaml-cpp=0.8.0
-  - zeromq=4.3.4
-  - zipp=3.17.0
-  - zlib=1.2.13
-  - zstandard=0.19.0
-  - zstd=1.5.5
-  - pip:
-      - absl-py==2.0.0
-      - altair==5.3.0
-      - altair-tiles==0.3.0
-      - anywidget==0.9.10
-      - arrow==1.3.0
-      - astunparse==1.6.3
-      - blinker==1.8.2
-      - cachetools==5.3.2
-      - click-plugins==1.1.1
-      - cligj==0.7.2
-      - cycler==0.12.1
-      - dash==2.17.0
-      - dash-core-components==2.0.0
-      - dash-html-components==2.0.0
-      - dash-table==5.0.0
-      - fiona==1.9.6
-      - flatbuffers==23.5.26
-      - fonttools==4.47.2
-      - fqdn==1.5.1
-      - gast==0.5.4
-      - geopandas==0.14.4
-      - google-auth==2.25.2
-      - google-auth-oauthlib==1.1.0
-      - google-pasta==0.2.0
-      - grpcio==1.60.0
-      - ipytablewidgets==0.3.1
-      - isoduration==20.11.0
-      - keras==2.15.0
-      - kiwisolver==1.4.5
-      - libclang==16.0.6
-      - lz4==4.3.3
-      - matplotlib==3.8.2
-      - mercantile==1.2.1
-      - ml-dtypes==0.2.0
-      - numpy==1.26.3
-      - oauthlib==3.2.2
-      - opt-einsum==3.3.0
-      - pandas==1.5.3
-      - pandoc==2.3
-      - plotly==5.22.0
-      - plumbum==1.8.2
-      - protobuf==4.23.4
-      - psygnal==0.11.0
-      - pyarrow==15.0.0
-      - pydot==1.4.2
-      - pyparsing==3.1.1
-      - pyproj==3.6.1
-      - rdkit==2023.9.1
-      - requests-oauthlib==1.3.1
-      - retrying==1.3.4
-      - rsa==4.9
-      - scipy==1.13.0
-      - seaborn==0.13.2
-      - shapely==2.0.4
-      - tenacity==8.3.0
-      - tensorboard==2.15.1
-      - tensorboard-data-server==0.7.2
-      - tensorflow==2.15.0
-      - tensorflow-estimator==2.15.0
-      - tensorflow-io-gcs-filesystem==0.34.0
-      - termcolor==2.4.0
-      - toolz==0.12.1
-      - traittypes==0.2.1
-      - types-python-dateutil==2.9.0.20240316
-      - tzdata==2023.4
-      - uri-template==1.3.0
-      - vega==4.0.0
-      - vega-datasets==0.9.0
-      - vegafusion==1.6.7
-      - vegafusion-python-embed==1.6.7
-      - vl-convert-python==1.4.0
-      - webcolors==1.13
-      - xgboost==2.0.2
-      - xlrd==2.0.1
-      - xyzservices==2024.4.0
+  - yarl=1.18.0
+  - zipp=3.21.0
+  - zlib=1.3.1
+  - zstandard=0.23.0
+  - zstd=1.5.6
+prefix: /Users/anna/anaconda3/envs/tf_env
